--- a/ultra-01.html
+++ b/ultra-01.html
@@ -8,11 +8,37 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <main id="container"><div class="row">
-        <div class="row__cont"><b>1. Дать форму множественного числа существительных.</b><br><br>amīc<b>us</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>chart<b>a</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>terr<b>a</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>bell<b>um</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>urs<b>us</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>sphaer<b>a</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>popul<b>us</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>dōn<b>um</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br><br></div>
-      </div><div class="row">
-        <div class="row__cont"><b>2. Поставить существительные во множественное число и согласовать с ними прилагательные.</b><br><br>coll<b>um</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true">long<b>us</b>&nbsp;-<b>a</b> -<b>um</b></div>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>terr<b>a</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true">longinqu<b>us</b>&nbsp;-<b>a</b>&nbsp;-<b>um</b></div> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>fōrm<b>a</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true">vag<b>us</b>&nbsp;-<b>a</b>&nbsp;-<b>um</b></div>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>de<b>us</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true">ignōt<b>us</b> -<b>a</b> -<b>um</b></div>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>fāt<b>um</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true">horrid<b>us</b>&nbsp;-<b>a</b>&nbsp;-<b>um</b></div>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>aqu<b>a</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true">frīgid<b>us</b>&nbsp;-<b>a</b> -<b>um</b></div>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>vent<b>us</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true">calid<b>us</b>&nbsp;-<b>a</b>&nbsp;-<b>um</b></div>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>vēl<b>um</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true">ātr<b>us</b>&nbsp;-<b>a</b>&nbsp;-<b>um</b></div>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br></div>
-      </div></main>
+    <main id="container">
+      <div class="row">
+        <div class="row__cont">
+          <div><b>1. Дать форму множественного числа существительных.</b></div>
+          <div><br></div>
+          <div>amīc<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>chart<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>terr<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>bell<b>um</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>urs<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>sphaer<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>popul<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>dōn<b>um</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>2. Поставить существительные во множественное число и согласовать с ними прилагательные.</b></div>
+          <div><br></div>
+          <div>coll<b>um</b> <div class="area" spellcheck="false" contenteditable="true">long<b>us</b> -<b>a</b> -<b>um</b></div> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>terr<b>a</b> <div class="area" spellcheck="false" contenteditable="true">longinqu<b>us</b> -<b>a</b> -<b>um</b></div> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fōrm<b>a</b> <div class="area" spellcheck="false" contenteditable="true">vag<b>us</b> -<b>a</b> -<b>um</b></div> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>de<b>us</b> <div class="area" spellcheck="false" contenteditable="true">ignōt<b>us</b> -<b>a</b> -<b>um</b></div> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fāt<b>um</b> <div class="area" spellcheck="false" contenteditable="true">horrid<b>us</b> -<b>a</b> -<b>um</b></div> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>aqu<b>a</b> <div class="area" spellcheck="false" contenteditable="true">frīgid<b>us</b> -<b>a</b> -<b>um</b></div> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vent<b>us</b> <div class="area" spellcheck="false" contenteditable="true">calid<b>us</b> -<b>a</b> -<b>um</b></div> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vēl<b>um</b> <div class="area" spellcheck="false" contenteditable="true">ātr<b>us</b> -<b>a</b> -<b>um</b></div> → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        </div>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
