--- a/ultra-02.html
+++ b/ultra-02.html
@@ -8,11 +8,39 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <main id="container"><div class="row">
-        <div class="row__cont"><b>1. Дать форму генетива.</b><br><br>lacrim<b>a</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>lōr<b>a</b> <i>pl</i> → <div class="area" spellcheck="false" contenteditable="true"></div><br>soci<b>ī</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>mōnstr<b>um</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>catēn<b>ae</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>castr<b>a</b>&nbsp;<i>pl</i>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>mercēnāri<b>us</b>&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br>aper&nbsp;→ <div class="area" spellcheck="false" contenteditable="true"></div><br><br></div>
-      </div><div class="row">
-        <div class="row__cont"><b>2. Определить форму слов, дать начальную форму.</b><br><br><i>Exemplum:</i><span style="white-space:pre">	</span>oppid<b>ō</b> magn<b>ō</b> <div class="area" spellcheck="false" contenteditable="true">abl sg</div>&nbsp;← <div class="area" spellcheck="false" contenteditable="true">oppid<b>um</b>&nbsp;magn<b>um</b></div><br><br>silv<b>ā</b> quiēt<b>ā</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div><br>hort<b>ōrum</b> pulchr<b>ōrum</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div><br>fōli<b>a</b> flāv<b>a</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div><br>vir<b>ī</b>&nbsp;timid<b>ī</b> <div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div><br>cist<b>ārum</b> plēn<b>ārum</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div><br>fabr<b>ī</b>&nbsp;perīt<b>ī</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div><br>sax<b>ō</b> dūr<b>ō</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div><br>umbr<b>ae</b>&nbsp;ōminōs<b>ae</b>&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div><br></div>
-      </div></main>
+    <main id="container">
+      <div class="row">
+        <div class="row__cont">
+          <div><b>1. Дать форму генетива.</b></div>
+          <div><br></div>
+          <div>lacrim<b>a</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>lōr<b>a</b> <i>pl</i> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>soci<b>ī</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mōnstr<b>um</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>catēn<b>ae</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>castr<b>a</b> <i>pl</i> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mercēnāri<b>us</b> → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>aper → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>2. Определить форму слов, дать начальную форму.</b></div>
+          <div><br></div>
+          <div><i>Exemplum:</i><span style="white-space:pre">	</span>oppid<b>ō</b> magn<b>ō</b> <div class="area" spellcheck="false" contenteditable="true">abl sg</div> ← <div class="area" spellcheck="false" contenteditable="true">oppid<b>um</b> magn<b>um</b></div></div>
+          <div><br></div>
+          <div>silv<b>ā</b> quiēt<b>ā</b> <div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>hort<b>ōrum</b> pulchr<b>ōrum</b> <div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fōli<b>a</b> flāv<b>a</b> <div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vir<b>ī</b> timid<b>ī</b> <div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>cist<b>ārum</b> plēn<b>ārum</b> <div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fabr<b>ī</b> perīt<b>ī</b> <div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>sax<b>ō</b> dūr<b>ō</b> <div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>umbr<b>ae</b> ōminōs<b>ae</b> <div class="area" spellcheck="false" contenteditable="true"></div> ← <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        </div>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
