--- a/cap-08.html
+++ b/cap-08.html
@@ -8,15 +8,77 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <main id="container"><div class="row">
-        <div class="row__cont"><div><b>1. Перевести.</b></div><div><br></div><div>1. Venīte ad agrum, puerī; nōlīte in casā manēre. <div class="area" spellcheck="false" contenteditable="true"></div></div><div>2. Domum redī, Horātia, et Scintillam iuvā.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>3. Ad lūdum festīnā, Quīnte; nōlī in viā lūdere.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>4. Magistrum audīte, puerī; nōlīte clāmāre.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>5. In casā sedē, Horātia, et fābulam audī.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>6. Festinā, Horātia: ad fontem sērō prōcēdimus.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>7. Venīte hūc, puellae, et aquam dūcite.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>8. Nāvēs parāte, prīncipēs, et nāvigāte ad urbem Trōiam.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>9. Urbem fortiter oppugnāte et Trōiānōs vincite.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>10. Nōlī prope nāvēs sedēre, Achillēs, sed comitēs dēfende.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div><br></div></div>
-      </div><div class="row">
-        <div class="row__cont"><div><b>2. Перевести на латинский.</b></div><div><br></div><div>1. Быстро заходите, дети, и садитесь. <div class="area" spellcheck="false" contenteditable="true"></div></div><div>2. Поди сюда, Децим; я хочу посмотреть твою дощечку.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>3. Работай усердно, Юлия; не играй.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>4. Мы усердно работаем, учитель, так что расскажи нам <b>(nōbīs)</b> рассказ.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div>5. Слушайте рассказ, ребята, и не шумите.&nbsp;<div class="area" spellcheck="false" contenteditable="true"></div></div><div><br></div></div>
-      </div><div class="row">
-        <div class="row__cont"><b>3. Определить и перевести данные глагольные формы.</b><br><br><i>Exemplum:</i><span style="white-space:pre">	</span> audī <div class="area" spellcheck="false" contenteditable="true">imperātīvus</div> <div class="area" spellcheck="false" contenteditable="true"><i>слушай</i></div><br><br>parat <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>cape <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>īmus <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>parāte <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>sumus <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>iubētis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>īre <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>fugere <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>abīte <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>possumus <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>oppugnāte <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>posse <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>estis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>venī <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>eunt <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br><br></div>
-      </div><div class="row">
-        <div class="row__cont"><div><b>4. Поставить существительные в верную форму.</b></div><div><br></div><div>1. Quīntus ad <div class="area" spellcheck="false" contenteditable="true">lūdus</div> cum <div class="area" spellcheck="false" contenteditable="true">amīcī</div> accēdit.</div><div>2. Magister puerōs prope <div class="area" spellcheck="false" contenteditable="true">iānua</div> lūdī exspectat.</div><div>3. Ubi puerōs videt, eōs in <div class="area" spellcheck="false" contenteditable="true">lūdus</div> vocat.</div><div>4. Tandem puerōs dīmittit; illī laetī ā <div class="area" spellcheck="false" contenteditable="true">lūdus</div> domum festīnant.</div><div>5. Quīntus et Horātia ad <div class="area" spellcheck="false" contenteditable="true">ager</div> festīnant.</div><div>6. Ubi accēdunt, Argus eōs videt et ex <div class="area" spellcheck="false" contenteditable="true">ager</div> currit.</div><div>7. Puerī cibum ad <div class="area" spellcheck="false" contenteditable="true">pater</div> portant.</div><div>8. Ille in <div class="area" spellcheck="false" contenteditable="true">terra</div> sedet et cibum cōnsūmit.</div><div>9. Quīntus in <div class="area" spellcheck="false" contenteditable="true">ager</div> manet; Horātia cum <div class="area" spellcheck="false" contenteditable="true">Argus</div> domum redit.</div><div>10. Ubi Scintilla fīliam videt, ē <div class="area" spellcheck="false" contenteditable="true">casa</div> exit et eam salūtat.</div></div>
-      </div></main>
+    <main id="container">
+      <div class="row">
+        <div class="row__cont">
+          <div><b>1. Перевести.</b></div>
+          <div><br></div>
+          <div>1. Venīte ad agrum, puerī; nōlīte in casā manēre. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>2. Domum redī, Horātia, et Scintillam iuvā. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>3. Ad lūdum festīnā, Quīnte; nōlī in viā lūdere. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>4. Magistrum audīte, puerī; nōlīte clāmāre. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>5. In casā sedē, Horātia, et fābulam audī. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>6. Festinā, Horātia: ad fontem sērō prōcēdimus. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>7. Venīte hūc, puellae, et aquam dūcite. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>8. Nāvēs parāte, prīncipēs, et nāvigāte ad urbem Trōiam. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>9. Urbem fortiter oppugnāte et Trōiānōs vincite. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>10. Nōlī prope nāvēs sedēre, Achillēs, sed comitēs dēfende. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>2. Перевести на латинский.</b></div>
+          <div><br></div>
+          <div>1. Быстро заходите, дети, и садитесь. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>2. Поди сюда, Децим; я хочу посмотреть твою дощечку. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>3. Работай усердно, Юлия; не играй. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>4. Мы усердно работаем, учитель, так что расскажи нам <b>(nōbīs)</b> рассказ. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>5. Слушайте рассказ, ребята, и не шумите. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>3. Определить и перевести данные глагольные формы.</b></div>
+          <div><br></div>
+          <div><i>Exemplum:</i><span style="white-space:pre">	</span> audī <div class="area" spellcheck="false" contenteditable="true">imperātīvus</div> <div class="area" spellcheck="false" contenteditable="true"><i>слушай</i></div></div>
+          <div><br></div>
+          <div>parat <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>cape <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>īmus <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>parāte <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>sumus <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>iubētis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>īre <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fugere <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>abīte <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>possumus <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>oppugnāte <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>posse <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>estis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>venī <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>eunt <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>4. Поставить существительные в верную форму.</b></div>
+          <div><br></div>
+          <div>1. Quīntus ad <div class="area" spellcheck="false" contenteditable="true">lūdus</div> cum <div class="area" spellcheck="false" contenteditable="true">amīcī</div> accēdit.</div>
+          <div>2. Magister puerōs prope <div class="area" spellcheck="false" contenteditable="true">iānua</div> lūdī exspectat.</div>
+          <div>3. Ubi puerōs videt, eōs in <div class="area" spellcheck="false" contenteditable="true">lūdus</div> vocat.</div>
+          <div>4. Tandem puerōs dīmittit; illī laetī ā <div class="area" spellcheck="false" contenteditable="true">lūdus</div> domum festīnant.</div>
+          <div>5. Quīntus et Horātia ad <div class="area" spellcheck="false" contenteditable="true">ager</div> festīnant.</div>
+          <div>6. Ubi accēdunt, Argus eōs videt et ex <div class="area" spellcheck="false" contenteditable="true">ager</div> currit.</div>
+          <div>7. Puerī cibum ad <div class="area" spellcheck="false" contenteditable="true">pater</div> portant.</div>
+          <div>8. Ille in <div class="area" spellcheck="false" contenteditable="true">terra</div> sedet et cibum cōnsūmit.</div>
+          <div>9. Quīntus in <div class="area" spellcheck="false" contenteditable="true">ager</div> manet; Horātia cum <div class="area" spellcheck="false" contenteditable="true">Argus</div> domum redit.</div>
+          <div>10. Ubi Scintilla fīliam videt, ē <div class="area" spellcheck="false" contenteditable="true">casa</div> exit et eam salūtat.</div>
+        </div>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
