--- a/extra-08.html
+++ b/extra-08.html
@@ -8,11 +8,56 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <main id="container"><div class="row">
-        <div class="row__cont"><b>1. Дать инфинитив и форму императива.</b><br><br><i>Exemplum:</i><span style="white-space:pre">	</span>&nbsp;iuvās <div class="area" spellcheck="false" contenteditable="true">iuvāre</div> <div class="area" spellcheck="false" contenteditable="true">iuvā</div><br><span style="white-space:pre">	</span>&nbsp;<span style="white-space:pre">	</span>&nbsp;<span style="white-space:pre">	</span>&nbsp;nōn manētis <div class="area" spellcheck="false" contenteditable="true">manēre</div> <div class="area" spellcheck="false" contenteditable="true">nōlīte manēre</div><br><div><br></div><div>dīcitis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>nōn āvertis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>nōn vetātis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>nūtrīs <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>mulcēs <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>saltātis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>nōn salītis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>curris <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>repetitis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>nōn tergētis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>arcēs <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>nōn vestīs <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>mūtātis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><div>rotās <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div><br></div>
-      </div><div class="row">
-        <div class="row__cont"><b>2. Поставить слова в форму, требуемую предлогом.</b><br><br>oppidum → <i>(ubi?)</i> in <div class="area" spellcheck="false" contenteditable="true"></div><br>mūrī → circum <div class="area" spellcheck="false" contenteditable="true"></div><br>porta → per <div class="area" spellcheck="false" contenteditable="true"></div><br>fōns → <i>(quō?)</i>&nbsp;in <div class="area" spellcheck="false" contenteditable="true"></div><br>liber → ē <div class="area" spellcheck="false" contenteditable="true"></div><br>ancillae → cum <div class="area" spellcheck="false" contenteditable="true"></div><br>marītus → sine <div class="area" spellcheck="false" contenteditable="true"></div><br>mare → <i>(quō?)</i>&nbsp;in <div class="area" spellcheck="false" contenteditable="true"></div><br>ōvum → ab <div class="area" spellcheck="false" contenteditable="true"></div><br>amor → ex <div class="area" spellcheck="false" contenteditable="true"></div><br>cīvēs → prope <div class="area" spellcheck="false" contenteditable="true"></div><br>templum → per <div class="area" spellcheck="false" contenteditable="true"></div><br>media Rōma → ad <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>servī bonī → cum <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>vectīgal magnum → ē <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>rēgēs prīmī → ā <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>sociī fidēlēs → sine <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br>numerus ingēns → <i>(ubi?)</i> in <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div><br></div>
-      </div></main>
+    <main id="container">
+      <div class="row">
+        <div class="row__cont">
+          <div><b>1. Дать инфинитив и форму императива.</b></div>
+          <div><br></div>
+          <div><i>Exemplum:</i><span style="white-space:pre">	</span> iuvās <div class="area" spellcheck="false" contenteditable="true">iuvāre</div> <div class="area" spellcheck="false" contenteditable="true">iuvā</div></div>
+          <div><span style="white-space:pre">			</span> nōn manētis <div class="area" spellcheck="false" contenteditable="true">manēre</div> <div class="area" spellcheck="false" contenteditable="true">nōlīte manēre</div></div>
+          <div><br></div>
+          <div>dīcitis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>nōn āvertis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>nōn vetātis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>nūtrīs <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mulcēs <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>saltātis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>nōn salītis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>curris <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>repetitis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>nōn tergētis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>arcēs <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>nōn vestīs <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mūtātis <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>rotās <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div><br></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row__cont">
+          <div><b>2. Поставить слова в форму, требуемую предлогом.</b></div>
+          <div><br></div>
+          <div>oppidum → <i>(ubi?)</i> in <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mūrī → circum <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>porta → per <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>fōns → <i>(quō?)</i> in <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>liber → ē <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>ancillae → cum <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>marītus → sine <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mare → <i>(quō?)</i> in <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>ōvum → ab <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>amor → ex <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>cīvēs → prope <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>templum → per <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>media Rōma → ad <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>servī bonī → cum <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vectīgal magnum → ē <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>rēgēs prīmī → ā <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>sociī fidēlēs → sine <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>numerus ingēns → <i>(ubi?)</i> in <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        </div>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
