--- a/ultra-08.html
+++ b/ultra-08.html
@@ -151,7 +151,7 @@
         <div>tū → ad <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>īnsul<b>ae</b> → inter <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>Rōm<b>a</b> → <i>(ubi?)</i> in <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div>hort<b>us</b> → <i>(quō)</i> in <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        <div>hort<b>us</b> → <i>(quō?)</i> in <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div><br></div>
       </div>
     </div>
