--- a/cap-02.html
+++ b/cap-02.html
@@ -20,7 +20,7 @@
           <div>5. Puella cēn<div class="area" spellcheck="false" contenteditable="true"></div> parat.</div>
           <div>6. Scintilla fīli<div class="area" spellcheck="false" contenteditable="true"></div> laudat.</div>
           <div>7. Argus cas<div class="area" spellcheck="false" contenteditable="true"></div> intrat et cēn<div class="area" spellcheck="false" contenteditable="true"></div> dēvorat.</div>
-          <div>8. Scintilla īrāt<div class="area" spellcheck="false" contenteditable="true"></div> est; cēn<div class="area" spellcheck="false" contenteditable="true"></div> iterum parat.</div>
+          <div>8. Scintilla īrāt<div class="area" spellcheck="false" contenteditable="true"></div> est; cēn<div class="area" spellcheck="false" contenteditable="true"></div> iterum (<b>снова, ещё раз</b>) parat.</div>
           <div><br></div>
         </div>
       </div>
