--- a/ultra-08.html
+++ b/ultra-08.html
@@ -39,7 +39,7 @@
         <div>7. Iūlia <b>sē</b> in speculō videt. → <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>8. In <b>digitīs</b> fēminae ānulī sunt. → <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>9. Sine <b>virō</b> in peristȳlō est. → <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div>10. Syra Dēliae sunt <b>ancillae</b> Aemiliae. → <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        <div>10. Syra Dēliaque sunt <b>ancillae</b> Aemiliae. → <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div><br></div>
       </div>
     </div>
