--- a/extra-07.html
+++ b/extra-07.html
@@ -16,7 +16,7 @@
           <div><i>Exemplum:</i><span style="white-space: pre;">	</span>serv<b>us</b> -<b>i</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true">2</div> <div class="area" spellcheck="false" contenteditable="true">serv</div></div>
           <div><span style="white-space: pre;">			</span>sēmen -in<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true">3</div> <div class="area" spellcheck="false" contenteditable="true">sēmin</div></div>
           <div><br></div>
-          <div>stipes -it<b>is</b> <i>m <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></i></div>
+          <div>stipes -it<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>pictūr<b>a</b> -<b>ae</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>mors mort<b>is</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>ancill<b>a</b> -<b>ae</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
@@ -27,7 +27,7 @@
           <div>ole<b>um</b> -<b>i</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>memori<b>a</b> -<b>ae</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>cor cord<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>homo -in<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>homō -in<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>māl<b>us</b> -<b>i</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>coll<b>is</b> -<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div><br></div>
@@ -40,7 +40,7 @@
           <div><i>Exemplum:</i><span style="white-space: pre;">	</span>cortex -ic<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true">согласный</div></div>
           <div><span style="white-space: pre;">			</span>canāl<b>is</b> -<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true">смешанный</div></div>
           <div><br></div>
-          <div>nūb<b>ēs</b> -<b>is</b> <i>f <div class="area" spellcheck="false" contenteditable="true"></div></i></div>
+          <div>nūb<b>ēs</b> -<b>is</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>pars part<b>is</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div><br></div>
           <div>flōs flōr<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div><br></div>
           <div>rēt<b>e</b> -<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div></div>
