--- a/capit-08.html
+++ b/capit-08.html
@@ -97,7 +97,7 @@
         <div>4. Lȳdia: “Ō, <div class="area" spellcheck="false" contenteditable="true"></div> pulchra sunt <div class="area" spellcheck="false" contenteditable="true"></div> ōrnāmenta!”</div>
         <div>5. Albīnus Lȳdiae et Mēdō ānulōs <div class="area" spellcheck="false" contenteditable="true"></div>: “Aspicite hōs ānulōs!”</div>
         <div>6. Mēdus: “Quot nummīs <div class="area" spellcheck="false" contenteditable="true"></div> ānulus <div class="area" spellcheck="false" contenteditable="true"></div> <b>[&lt; gemma]</b>?”</div>
-        <div>7. Albīnus: “<div class="area" spellcheck="false" contenteditable="true"></div> huius ānulī est centum <b>[= nummī]</b>. Haec gemma sōla <div class="area" spellcheck="false" contenteditable="true"></div> <b>[LXXX]</b> sēstertiīs cōnstat.</div>
+        <div>7. Albīnus: “<div class="area" spellcheck="false" contenteditable="true"></div> huius ānulī est centum <div class="area" spellcheck="false" contenteditable="true"></div> <b>[= nummī]</b>. Haec gemma sōla <div class="area" spellcheck="false" contenteditable="true"></div> <b>[LXXX]</b> sēstertiīs cōnstat.</div>
         <div>8. Mēdus: “<div class="area" spellcheck="false" contenteditable="true"></div> <b>[= tam magna]</b> gemma ad tam parvum ānulum nōn <div class="area" spellcheck="false" contenteditable="true"></div>.”</div>
         <div><br></div>
       </div>
