--- a/extra-07.html
+++ b/extra-07.html
@@ -13,7 +13,7 @@
         <div class="row__cont">
           <div><b>1. Определить склонение существительных, назвать основу.</b></div>
           <div><br></div>
-          <div><i>Exemplum:</i><span style="white-space: pre;">	</span>serv<b>us</b> -<b>i</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true">2</div> <div class="area" spellcheck="false" contenteditable="true">serv</div></div>
+          <div><i>Exemplum:</i><span style="white-space: pre;">	</span>serv<b>us</b> -<b>ī</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true">2</div> <div class="area" spellcheck="false" contenteditable="true">serv</div></div>
           <div><span style="white-space: pre;">			</span>sēmen -in<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true">3</div> <div class="area" spellcheck="false" contenteditable="true">sēmin</div></div>
           <div><br></div>
           <div>stipes -it<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
