--- a/extra-07.html
+++ b/extra-07.html
@@ -16,7 +16,7 @@
           <div><i>Exemplum:</i><span style="white-space: pre;">	</span>serv<b>us</b> -<b>ī</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true">2</div> <div class="area" spellcheck="false" contenteditable="true">serv</div></div>
           <div><span style="white-space: pre;">			</span>sēmen -in<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true">3</div> <div class="area" spellcheck="false" contenteditable="true">sēmin</div></div>
           <div><br></div>
-          <div>stipes -it<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>stīpes -it<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>pictūr<b>a</b> -<b>ae</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>mors mort<b>is</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>ancill<b>a</b> -<b>ae</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
