--- a/ultra-03.html
+++ b/ultra-03.html
@@ -51,7 +51,7 @@
         <div>3. <div class="area" spellcheck="false" contenteditable="true">Rōmulus</div> Remum interficit.</div>
         <div>4. Senātus <div class="area" spellcheck="false" contenteditable="true">populus</div> <div class="area" spellcheck="false" contenteditable="true">cūrāre</div>.</div>
         <div><span>5. Rōma antīqua <div class="area" spellcheck="false" contenteditable="true">fōrma quadrāta</div> habet.</span><br></div>
-        <div><span>6. Mārcus Brūtus <div class="area" spellcheck="false" contenteditable="true">Iūlius</div> Casarem in <div class="area" spellcheck="false" contenteditable="true">senātus</div> necat.</span></div>
+        <div><span>6. Mārcus Brūtus <div class="area" spellcheck="false" contenteditable="true">Iūlius</div> Caesarem in <div class="area" spellcheck="false" contenteditable="true">senātus</div> necat.</span></div>
         <div><span>7. Senātus in <div class="area" spellcheck="false" contenteditable="true">Cūria</div> <div class="area" spellcheck="false" contenteditable="true">convenīre</div>.</span></div>
         <div><span>8. In <div class="area" spellcheck="false" contenteditable="true">Capitōlium</div> multa sunt aedificia.</span></div>
         <div><div>9. Imperātor Trāiānus <div class="area" spellcheck="false" contenteditable="true">novum forum</div> aedificat. </div><div>10. Amphitheātrum <div class="area" spellcheck="false" contenteditable="true">Flāvius</div> clārissimum est.</div></div>
