--- a/capit-02.html
+++ b/capit-02.html
@@ -11,6 +11,8 @@
     <main id="container">
       <div class="row">
         <div class="row__cont">
+        <div><i>Lēctiō prīma (versūs 1—24)</i></div>
+        <div><b><br></b></div>
           <div><b>Exercitium 2</b></div>
           <div><br></div>
           <div><i><div class="area" spellcheck="false" contenteditable="true">pater</div> <div class="area" spellcheck="false" contenteditable="true">māter</div> <div class="area" spellcheck="false" contenteditable="true">fīlius</div> <div class="area" spellcheck="false" contenteditable="true">fīlia</div> <div class="area" spellcheck="false" contenteditable="true">līberī</div></i></div>
@@ -36,6 +38,8 @@
       </div>
       <div class="row">
         <div class="row__cont">
+        <div><i>Lēctiō secunda (versūs 25—61)</i></div>
+        <div><br></div>
           <div><div><b>Exercitium 5</b></div>
           <div><br></div>
           <div><i><div class="area" spellcheck="false" contenteditable="true">servus</div> <div class="area" spellcheck="false" contenteditable="true">ancilla</div> <div class="area" spellcheck="false" contenteditable="true">dominus</div> <div class="area" spellcheck="false" contenteditable="true">domina</div> <div class="area" spellcheck="false" contenteditable="true">līberī</div></i></div>
@@ -116,6 +120,8 @@
       </div>
       <div class="row">
         <div class="row__cont">
+        <div><i>Lēctiō tertia (versūs 62—92)</i></div>
+        <div><br></div>
           <div><b>Exercitium 10</b></div>
           <div><br></div>
           <div><i><div class="area" spellcheck="false" contenteditable="true">meus</div> <div class="area" spellcheck="false" contenteditable="true">tuus</div></i></div>
