--- a/capit-02.html
+++ b/capit-02.html
@@ -146,7 +146,7 @@
           <div><br></div>
           <div><i><div class="area" spellcheck="false" contenteditable="true">antīquus</div> <div class="area" spellcheck="false" contenteditable="true">cēterī -ae -a</div> <div class="area" spellcheck="false" contenteditable="true">ессе</div> <div class="area" spellcheck="false" contenteditable="true">novus</div> <div class="area" spellcheck="false" contenteditable="true">pāgina</div> <div class="area" spellcheck="false" contenteditable="true">titulus</div> <div class="area" spellcheck="false" contenteditable="true">liber</div> <div class="area" spellcheck="false" contenteditable="true">capitulum</div> <div class="area" spellcheck="false" contenteditable="true">vocābulum</div></i></div>
           <div><br></div>
-          <div>1. <div class="area" spellcheck="false" contenteditable="true"></div> duo <div class="area" spellcheck="false" contenteditable="true"></div> Latīnī: liber <div class="area" spellcheck="false" contenteditable="true"></div> [≠ novus] et liber <div class="area" spellcheck="false" contenteditable="true"></div>.</div>
+          <div>1. <div class="area" spellcheck="false" contenteditable="true"></div> duo <div class="area" spellcheck="false" contenteditable="true"></div> Latīnī: liber <div class="area" spellcheck="false" contenteditable="true"></div> <b>[≠ novus]</b> et liber <div class="area" spellcheck="false" contenteditable="true"></div>.</div>
           <div>2. Numerus libr<div class="area" spellcheck="false" contenteditable="true"></div> Latīn<div class="area" spellcheck="false" contenteditable="true"></div> magnus est.</div>
           <div>3. LINGVA LATINA est <div class="area" spellcheck="false" contenteditable="true"></div> librī tuī Latīnī.</div>
           <div>4. In LINGVA LATINA sunt multae <div class="area" spellcheck="false" contenteditable="true"></div> (pāg. 1, 2, 3, cēterae) et multa <div class="area" spellcheck="false" contenteditable="true"></div> (cap. I, II, III et <div class="area" spellcheck="false" contenteditable="true"></div>).</div>
@@ -155,7 +155,7 @@
           <div>5. Titulus capitul<div class="area" spellcheck="false" contenteditable="true"></div> prīmī est IMPERIVM ROMANVM.</div>
           <div>8. In capitulō prīmō mult<div class="area" spellcheck="false" contenteditable="true"></div> vocābul<div class="area" spellcheck="false" contenteditable="true"></div> sunt.</div>
           <div>9. Numerus vocābul<div class="area" spellcheck="false" contenteditable="true"></div> magnus est.</div>
-          <div>10. Rōma est <div class="area" spellcheck="false" contenteditable="true"></div> prīmum capitul<div class="area" spellcheck="false" contenteditable="true"></div> prīm<div class="area" spellcheck="false" contenteditable="true"></div>.</div>
+          <div>10. <i>Rōma</i> est <div class="area" spellcheck="false" contenteditable="true"></div> prīmum capitul<div class="area" spellcheck="false" contenteditable="true"></div> prīm<div class="area" spellcheck="false" contenteditable="true"></div>.</div>
           <div>11. <b>R</b> est littera prīma vocābul<div class="area" spellcheck="false" contenteditable="true"></div> prīmī.</div>
         </div>
       </div>
