--- a/capit-08.html
+++ b/capit-08.html
@@ -42,7 +42,7 @@
         <div>2. Aemilia ānulum accipit ā Iūliō. = <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>3. Virī fēminīs ōrnāmenta dant. = <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>4. Servus mālum accipit ā dominō. = <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div>5. Mēdus Lydiae rosam dat. = <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        <div>5. Mēdus Lȳdiae rosam dat. = <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>6. Servī nummōs accipiunt ā dominō. = <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div><br></div>
       </div>
