--- a/ultra-03.html
+++ b/ultra-03.html
@@ -44,7 +44,7 @@
     </div>
     <div class="row">
       <div class="row__cont">
-        <div><b>3. Поставить слово в нужную форму.</b></div>
+        <div><b>3. Поставить слова в нужную форму.</b></div>
         <div><br></div>
         <div>1. Mārcus Crassus <div class="area" spellcheck="false" contenteditable="true">Spartacus</div> vincit.</div>
         <div>2. Rōmulus <div class="area" spellcheck="false" contenteditable="true">Rōma</div> condit.</div>
