--- a/capit-03.html
+++ b/capit-03.html
@@ -19,11 +19,11 @@
           <div><br></div>
           <div>1. In <div class="area" spellcheck="false" contenteditable="true"></div> prīmā sunt trēs <div class="area" spellcheck="false" contenteditable="true"></div>: Iūlia, Mārcus, Quīntus.</div>
           <div>2. Iūlia <div class="area" spellcheck="false" contenteditable="true"></div>: “Lalla, lalla!” Iūlia <div class="area" spellcheck="false" contenteditable="true"></div> est.</div>
-          <div>3. Mārcus laetus nōn est, Marcus <div class="area" spellcheck="false" contenteditable="true"></div> est.</div>
+          <div>3. Mārcus laetus nōn est, Mārcus <div class="area" spellcheck="false" contenteditable="true"></div> est.</div>
           <div>4. Mārcus Iūliam <div class="area" spellcheck="false" contenteditable="true"></div>.</div>
           <div>5. Iūlia nōn cantat, sed <div class="area" spellcheck="false" contenteditable="true"></div>.</div>
           <div>6. Mārcus <div class="area" spellcheck="false" contenteditable="true"></div>: “Hahahae!”</div>
-          <div>7. Iūlia: “Ubi est mater?” Iūlia Aemiliam nōn <div class="area" spellcheck="false" contenteditable="true"></div>.</div>
+          <div>7. Iūlia: “Ubi est māter?” Iūlia Aemiliam nōn <div class="area" spellcheck="false" contenteditable="true"></div>.</div>
           <div>8. Iūlia Aemiliam <div class="area" spellcheck="false" contenteditable="true"></div>: “Mamma!”</div>
           <div>9. Aemilia <div class="area" spellcheck="false" contenteditable="true"></div>.</div>
           <div><br></div>
@@ -57,7 +57,7 @@
           <div><br></div>
           <div><div class="area" spellcheck="false" contenteditable="true"><i>-at</i></div> <div class="area" spellcheck="false" contenteditable="true"><i>-et</i></div> <div class="area" spellcheck="false" contenteditable="true"><i>-it</i></div></div>
           <div><br></div>
-          <div>1. Iūlia cant<div class="area" spellcheck="false" contenteditable="true"></div>, et Marcus eam puls<div class="area" spellcheck="false" contenteditable="true"></div>!</div>
+          <div>1. Iūlia cant<div class="area" spellcheck="false" contenteditable="true"></div>, et Mārcus eam puls<div class="area" spellcheck="false" contenteditable="true"></div>!</div>
           <div>2. Iam Iūlia nōn cant<div class="area" spellcheck="false" contenteditable="true"></div>, sed plōr<div class="area" spellcheck="false" contenteditable="true"></div>.</div>
           <div>3. Iūlia Aemiliam nōn vid<div class="area" spellcheck="false" contenteditable="true"></div>; Iūlia Aemiliam voc<div class="area" spellcheck="false" contenteditable="true"></div>.</div>
           <div>4. Aemilia ven<div class="area" spellcheck="false" contenteditable="true"></div> et interrog<div class="area" spellcheck="false" contenteditable="true"></div>: “Ubi est Iūlius?”</div>
@@ -150,7 +150,7 @@
           <div>6. Puer <div class="area" spellcheck="false" contenteditable="true"></div> Mārcus pulsat est Quīntus.</div>
           <div>7. Iūlia, <div class="area" spellcheck="false" contenteditable="true"></div> parva puella est, Aemiliam vocat.</div>
           <div>8. Aemilia, <div class="area" spellcheck="false" contenteditable="true"></div> Iūlia vocat, venit.</div>
-          <div>9. Aemilia, <div class="area" spellcheck="false" contenteditable="true"></div> māter est līberõrum, fīlium improbum verberat.</div>
+          <div>9. Aemilia, <div class="area" spellcheck="false" contenteditable="true"></div> māter est līberōrum, fīlium improbum verberat.</div>
           <div>10. Fīlius <div class="area" spellcheck="false" contenteditable="true"></div> Aemilia verberat est Mārcus.</div>
           <div>11. Quīntus, <div class="area" spellcheck="false" contenteditable="true"></div> fīlius probus est, Iūlium vocat.</div>
           <div>12. Iūlius, <div class="area" spellcheck="false" contenteditable="true"></div> Quīntus vocat, nōn venit.</div>
