--- a/ultra-03.html
+++ b/ultra-03.html
@@ -37,7 +37,7 @@
         <div>prob<b>a</b>t ← <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>haur<b>ī</b>re → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>oport<b>ē</b>re → <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div>confirm<b>a</b>t ← <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        <div>cōnfirm<b>a</b>t ← <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>vinc<b>i</b>t ← <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div><br></div>
       </div>
