--- a/extra-07.html
+++ b/extra-07.html
@@ -21,14 +21,14 @@
           <div>mors mort<b>is</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>ancill<b>a</b> -<b>ae</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>pēs ped<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>loc<b>us</b> -<b>i</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>loc<b>us</b> -<b>ī</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>corpus -or<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>rīm<b>a</b> -<b>ae</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>ole<b>um</b> -<b>i</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>ole<b>um</b> -<b>ī</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>memori<b>a</b> -<b>ae</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>cor cord<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>homō -in<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>māl<b>us</b> -<b>i</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>māl<b>us</b> -<b>ī</b> <i>f</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>coll<b>is</b> -<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div><br></div>
         </div>
@@ -80,7 +80,7 @@
           <div>urb<b>is</b> antīqu<b>ae</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>dent<b>ibus</b> acūt<b>īs</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>nātiōn<b>ēs</b> bellicōs<b>ae</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>mīlit<b>um</b> Rōmān<b>um</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>mīlit<b>um</b> Rōmān<b>ōrum</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>in flūmin<b>e</b> rapid<b>ō</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>ad Iov<b>em</b> Maxim<b>um</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>ā sanguin<b>e</b> Trōiān<b>ō</b> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
