--- a/extra-07.html
+++ b/extra-07.html
@@ -46,7 +46,7 @@
           <div>rēt<b>e</b> -<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>pectus -or<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div><br></div>
           <div>ōs ōr<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div><br></div>
-          <div>vectīgal -ālis <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>vectīgal -āl<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>leō -ōn<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>host<b>is</b> -<b>is</b> <i>m</i> <div class="area" spellcheck="false" contenteditable="true"></div><br></div>
           <div>genus -er<b>is</b> <i>n</i> <div class="area" spellcheck="false" contenteditable="true"></div></div>
