--- a/cap-06.html
+++ b/cap-06.html
@@ -27,7 +27,7 @@
           <div><b>2. Перевести на латинский.</b></div>
           <div><br></div>
           <div>1. Мы идем на рынок. Ты разве не готова? <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>2. Флак велит сын пойти с ним на поле. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>2. Флак велит сыну пойти с ним на поле. <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>3. «Квинт, — говорит он, — ты должен работать в поле». <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>4. Разве ты не хочешь мне помочь? <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>5. Но мальчик устал и не хочет работать. <div class="area" spellcheck="false" contenteditable="true"></div></div>
