--- a/capit-10.html
+++ b/capit-10.html
@@ -155,7 +155,7 @@
         <div>4. Aemilia venit. Puerī Aemili<div class="area" spellcheck="false" contenteditable="true"></div> ven<div class="area" spellcheck="false" contenteditable="true"></div> vident.</div>
         <div>5. Aemilia īrāta est. Mārcus Aemili<div class="area" spellcheck="false" contenteditable="true"></div> īrāt<div class="area" spellcheck="false" contenteditable="true"></div> es<div class="area" spellcheck="false" contenteditable="true"></div> videt.</div>
         <div>6. Pullī mortuī sunt. Iūlia pull<div class="area" spellcheck="false" contenteditable="true"></div> mortu<div class="area" spellcheck="false" contenteditable="true"></div> es<div class="area" spellcheck="false" contenteditable="true"></div> videt.</div>
-        <div>7. Dāvus ā Iūliō interrogātur et ā Mēdō accūsātur. Aemilia Dāv<div class="area" spellcheck="false" contenteditable="true"></div> ā Iūliō interrog<div class="area" spellcheck="false" contenteditable="true"></div> et ā Mēdō accū<div class="area" spellcheck="false" contenteditable="true"></div> audit.</div>
+        <div>7. Dāvus ā Iūliō interrogātur et ā Mēdō accūsātur. Aemilia Dāv<div class="area" spellcheck="false" contenteditable="true"></div> ā Iūliō interrog<div class="area" spellcheck="false" contenteditable="true"></div> et ā Mēdō accūs<div class="area" spellcheck="false" contenteditable="true"></div> audit.</div>
         <div>8. Mēdus ā lūliō vocātur neque venit. Aemilia Mēd<div class="area" spellcheck="false" contenteditable="true"></div> ā lūliō voc<div class="area" spellcheck="false" contenteditable="true"></div> audit neque e<div class="area" spellcheck="false" contenteditable="true"></div> ven<div class="area" spellcheck="false" contenteditable="true"></div> videt.</div>
       </div>
     </div>
