--- a/cap-06.html
+++ b/cap-06.html
@@ -26,13 +26,13 @@
         <div class="row__cont">
           <div><b>2. Перевести на латинский.</b></div>
           <div><br></div>
-          <div>1. Мы идем на рынок. Ты разве не готова? <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>1. Мы идем на рынок. Ты разве не (<b>nōnne</b>) готова? <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>2. Флак велит сыну пойти с ним на поле. <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>3. «Квинт, — говорит он, — ты должен работать в поле». <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>4. Разве ты не хочешь мне помочь? <div class="area" spellcheck="false" contenteditable="true"></div></div>
           <div>5. Но мальчик устал и не хочет работать. <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>6. Наконец Флак решает отпустить сына домой. <div class="area" spellcheck="false" contenteditable="true"></div></div>
-          <div>7. Квин торопится домой и зовет Горацию. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>6. Наконец Флак решает (<b>cōnstituere</b>) отпустить сына домой. <div class="area" spellcheck="false" contenteditable="true"></div></div>
+          <div>7. Квинт торопится домой и зовет Горацию. <div class="area" spellcheck="false" contenteditable="true"></div></div>
         </div>
       </div>
     </main>
