--- a/cap-09.html
+++ b/cap-09.html
@@ -15,7 +15,7 @@
           <div><br></div>
           <div>1. Puella fābulam <div class="area" spellcheck="false" contenteditable="true">māter</div> laeta audit.</div>
           <div>2. Magister tabulās <div class="area" spellcheck="false" contenteditable="true">puerī</div> spectat.</div>
-          <div>3. Quintus ad <div class="area" spellcheck="false" contenteditable="true">pater</div> agrum celeriter currit.</div>
+          <div>3. Quīntus ad <div class="area" spellcheck="false" contenteditable="true">pater</div> agrum celeriter currit.</div>
           <div>4. Colōnus clāmōrēs <div class="area" spellcheck="false" contenteditable="true">feminae</div> audīre nōn potest.</div>
           <div>5. Multī <div class="area" spellcheck="false" contenteditable="true">principēs</div> in urbem fugere cupiunt.</div>
           <div>6. Paucī <div class="area" spellcheck="false" contenteditable="true">Trōiānī</div> fortiter pugnant.</div>
